compiler/tools/fpp-to-dict/test/top/missingFwOpcodeType.ref.txt
fpp-to-dict
[ local path prefix ]/tools/fpp-to-dict/test/top/missingFwOpcodeType.fpp:27.1
topology T {
^
error: symbol FwOpcodeType is not defined
note: looking for a type here
note: the symbol FwOpcodeType has an implied use at the point of the error
note: this implied use occurs when constructing a dictionary
